# honyaku.nvim

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/translate/: client.rs  request.rs  response.rs
test_data/: post_response.json
